fix layout issue

--- a/index.css
+++ b/index.css
@@ -44,11 +44,6 @@ body {
   background-color: black;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-}
-
 .score-elem {
   display: block;
 }
@@ -103,6 +98,14 @@ body {
 }
 
 @media only screen and (orientation: landscape) {
+  .container {
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
   .team {
     font-size: 50vh;
     width: 50%;
@@ -127,10 +130,18 @@ body {
 }
 
 @media only screen and (orientation: portrait) {
+  .container {
+    height: 94%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
   .team {
     font-size: 27vh;
     width: 100%;
-    height: 46%;
+    height: 47%;
     display: block;
     align-content: start;
     text-align: center;
@@ -139,8 +150,8 @@ body {
 
   .menu {
     width: 100%;
-    height: 8%;
-    font-size: 6vh;
+    height: 6%;
+    font-size: 4.5vh;
   }
 
   .field {
